--- a/train_encoding_models.ipynb
+++ b/train_encoding_models.ipynb
@@ -3288,7 +3288,25 @@
       "True\n",
       "model.1.poisson_linear.linear.bias\n",
       "torch.Size([95])\n",
-      "True\n"
+      "True\n",
+      "  epoch 1 loss: 0.1107194208349857 corr: 0.20166708008197815\n",
+      " num. neurons : 95\n",
+      "  epoch 2 loss: 0.10498589938847806 corr: 0.2655807944781295\n",
+      " num. neurons : 95\n",
+      "  epoch 3 loss: 0.10399192190919247 corr: 0.32198398535725586\n",
+      " num. neurons : 95\n",
+      "  epoch 4 loss: 0.10317453183428779 corr: 0.34868428588960054\n",
+      " num. neurons : 95\n",
+      "  epoch 5 loss: 0.10254030340004966 corr: 0.3759320285017014\n",
+      " num. neurons : 95\n",
+      "  epoch 6 loss: 0.10195204350336684 corr: 0.40074464807526833\n",
+      " num. neurons : 95\n",
+      "  epoch 7 loss: 0.10149118787955239 corr: 0.37954624195337555\n",
+      " num. neurons : 95\n",
+      "  epoch 8 loss: 0.10113787807095113 corr: 0.39832490449314994\n",
+      " num. neurons : 95\n",
+      "  epoch 9 loss: 0.10081533898857875 corr: 0.40834998366616626\n",
+      " num. neurons : 95\n"
      ]
     }
    ],
