--- a/train_decoding_models.ipynb
+++ b/train_decoding_models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "4db25e96-0285-41b1-b318-f573e124bd0a",
    "metadata": {},
    "outputs": [],
@@ -21,18 +21,20 @@
     "        \n",
     "        self.device = device\n",
     "        self.num_neurons = num_neurons\n",
-    "        self.embed_size = embed_size\n",
+    "        self.embed_size = num_neurons #embed_size\n",
     "        \n",
     "        self.linear1 = nn.Linear(num_neurons, hidden_size, device=device)\n",
     "        self.linear2 = nn.Linear(hidden_size, hidden_size, device=device)\n",
     "        self.linear3 = nn.Linear(hidden_size, embed_size, device=device)\n",
+    "\n",
+    "        self.linear = nn.Linear(num_neurons, num_neurons, device=device)\n",
     "        self.act = nn.ReLU()\n",
     "\n",
     "    def forward(self, x):\n",
-    "        x = self.act(self.linear1(x))\n",
-    "        x = x + self.act(self.linear2(x))\n",
-    "        x = self.linear3(x)\n",
-    "        \n",
+    "        # x = self.act(self.linear1(x))\n",
+    "        # x = x + self.act(self.linear2(x))\n",
+    "        # x = self.linear3(x)\n",
+    "        x = x + self.act(self.linear(x))\n",
     "        return x\n",
     "\n",
     "# video embedding model\n",
@@ -48,7 +50,8 @@
     "        num_input  = readout_input.shape[1] * readout_input.shape[2]\n",
     "        \n",
     "        feat_to_embed = FeatToEmbed(use_pool = use_pool, pool_size = pool_size, pool_stride= pool_stride, device=device)\n",
-    "        neu_embed = NeuralEmbedder(num_input, device=device)\n",
+    "        #neu_embed = NeuralEmbedder(num_neurons, device=device) #num_input, device=device)\n",
+    "        neu_embed = nn.Linear(num_input, num_neurons, device=device)\n",
     "        \n",
     "        self.model = nn.Sequential(\n",
     "            feat_ext,\n",
@@ -88,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "1dce4ad2-aeb4-4bb9-9d05-fcbcc946ca59",
    "metadata": {},
    "outputs": [],
@@ -105,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "102dbe0d-1a68-4f2d-94f5-cf11c86eb13e",
    "metadata": {},
    "outputs": [],
@@ -163,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "id": "eb49cf5f-09b8-41de-88c5-f3a359a826b9",
    "metadata": {},
    "outputs": [],
@@ -282,7 +285,7 @@
     "                vid_embed = full_vid_embedder(vids)\n",
     "                neu_embed = full_neu_embedder(neus)\n",
     "\n",
-    "                loss = triplet_loss(vid_embed, neu_embed, alpha) + triplet_loss(neu_embed, vid_embed, alpha)\n",
+    "                loss = triplet_loss(vid_embed, neu_embed, alpha) #+ triplet_loss(neu_embed, vid_embed, alpha)\n",
     "                loss.backward()\n",
     "                vid_optimizer.step()\n",
     "                neu_optimizer.step()\n",
@@ -311,8 +314,8 @@
     "            print('  epoch {} loss: {} decode acc: {}'.format(epochs + 1, epoch_loss / len(train_dataset), np.nanmean(decode_acc)))\n",
     "            #print(f' num. neurons : {len(decode_acc)}')\n",
     "            \n",
-    "        if config[\"save\"]:\n",
-    "            torch.save(full_model.state_dict(), f\"{model_output_path}_{session_id}.pickle\")\n",
+    "        #if config[\"save\"]:\n",
+    "        #    torch.save(full_model.state_dict(), f\"{model_output_path}_{session_id}.pickle\")\n",
     "            \n",
     "        corr_avgs.append(sess_corrs)\n",
     "        \n",
@@ -341,12 +344,14 @@
      "text": [
       "0\n",
       "readout input shape: 384\n",
-      "  epoch 1 loss: 0.03415380753852703 decode acc: 0.25\n",
-      "  epoch 2 loss: 0.013423107126612722 decode acc: 0.25\n",
-      "  epoch 3 loss: 0.012848293906376686 decode acc: 0.25\n",
-      "  epoch 4 loss: 0.012699724170896742 decode acc: 0.25\n",
-      "  epoch 5 loss: 0.012644031349523568 decode acc: 0.25\n",
-      "  epoch 6 loss: 0.012616411270918669 decode acc: 0.25\n"
+      "  epoch 1 loss: 10.488836178249784 decode acc: 0.05\n",
+      "  epoch 2 loss: 5.966183292718581 decode acc: 0.075\n",
+      "  epoch 3 loss: 5.433130971649547 decode acc: 0.075\n",
+      "  epoch 4 loss: 4.960577555526922 decode acc: 0.075\n",
+      "  epoch 5 loss: 4.653925652209623 decode acc: 0.075\n",
+      "  epoch 6 loss: 4.289170992815936 decode acc: 0.075\n",
+      "  epoch 7 loss: 3.9539900386480635 decode acc: 0.075\n",
+      "  epoch 8 loss: 3.7107306680561583 decode acc: 0.05\n"
      ]
     }
    ],
@@ -354,7 +359,7 @@
     "full_vid_fcn = lambda train_dataset: VideoEmbedder(feat_ext_type = 'resnet3d', freeze_weights=True, use_pretrained = True, modality=config[\"modality\"], layer=config[\"layer\"], stim_shape=config[\"stim_shape\"], train_dataset=train_dataset, use_pool = config['use_pool'], pool_size = config['pool_size'], pool_stride = config[\"pool_stride\"], device=device)\n",
     "full_neu_fcn = lambda num_neurons: NeuralEmbedder(num_neurons, device=device)\n",
     "\n",
-    "train_model(full_vid_fcn, full_neu_fcn, \"frozen pretrained\")\n"
+    "train_model(full_vid_fcn, full_neu_fcn, \"frozen pretrained\")"
    ]
   },
   {
